Clase de BackEnd

--- a/BackEnd/24-05-2024/index.html
+++ b/BackEnd/24-05-2024/index.html
@@ -6,7 +6,7 @@
     <title>Sitio Web | Pagina Web</title>
 </head>
 <body>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
     <div id="menu">
         <div id="input">
             <textarea id="ingreso"></textarea>
