--- a/Curso LecaSabe/JavaScript/Tema_10-Eventos/index.html
+++ b/Curso LecaSabe/JavaScript/Tema_10-Eventos/index.html
@@ -8,7 +8,7 @@
 </head>
 <body id="body">
     <div id="caja">
-        <p id="mod1" class="botonFase1">Clickeame para mostrarte el texto o ocultarlo</p>
+        <p id="mod1" onclick="header()" class="botonFase1">Clickeame para mostrarte el texto o ocultarlo</p>
     </div>
     <p id="mod2" class="textoOculto">Hola soy el texto :D</p>
     <script src="script.js"></script>
