--- a/Front End/22-05-2024/index.html
+++ b/Front End/22-05-2024/index.html
@@ -25,7 +25,7 @@
                 <option value="PY">Paraguay</option>
                 <option value="CL">Chile</option>
                 <option value="MÉX">México</option>
-                <option value="Bol">Bolivia</option>
+                <option value="BOL">Bolivia</option>
             </select> /////
             <input type="tel" name="telefono" id="telefono" placeholder="095343837" value="Numero de Telefono">
             
