--- a/Testing/JavaScript/EventoDOMProyecto/Testeo1.html
+++ b/Testing/JavaScript/EventoDOMProyecto/Testeo1.html
@@ -4,18 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="Testeo1.js" defer></script>
+    <link href="Testeo1.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <main>
-        <h1 class="texto1em">Titulo h1</h1>
-        <p class="texto1em">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates vitae quas fugiat perferendis, quis sit quisquam nostrum soluta incidunt molestias animi optio. Corrupti ratione consectetur minus enim dicta, quam ullam?</p>
-        <p class="texto1em">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum eaque sapiente dolorem eius accusamus facilis cumque perferendis. Explicabo animi, aspernatur voluptas mollitia ab, vero veniam repellendus asperiores officia, tempora molestias?</p>
-        
-        <input type="radio" id="1em" name="em">1em
-        <br>
-        <input type="radio" id="2em" name="em">2em
+        <h1>Titulo h1</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo vitae, repudiandae hic eum saepe quos voluptatibus eveniet et rem, tempora odit temporibus! Natus, quisquam. Sint, quidem quaerat? Nesciunt, tempora velit.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum similique ea, hic obcaecati voluptates eos pariatur. Provident, commodi vel id illum sed libero. Blanditiis similique odio consequatur esse amet ipsam.</p>
+        <h2>Hola soy un h2</h2>
+        <h3>Y yo un h3</h3>
+        <h4>Hola soy h4 todos me olvidan...</h4>
 
+        <input type="radio" name="tamaño" id="default" checked>
+        <label for="default">Por Defecto</label>
+
+        <input type="radio" name="tamaño" id="tam-chico">
+        <label for="tam-chico">Chico</label>
+
+        <input type="radio" name="tamaño" id="tam-mediano">
+        <label for="tam-mediano">Mediano</label>
+
+        <input type="radio" name="tamaño" id="tam-grande">
+        <label for="tam-grande">Grande</label>
+        <br>
+        <input type="radio" name="tema" id="claro" checked>
+        <label for="claro">Claro</label>
+        <input type="radio" name="tema" id="oscuro">
+        <label for="oscuro">Oscuro</label>
     </main>
+    <script src="Testeo1.js"></script>
 </body>
 </html>
