--- a/Testing/JavaScript/EventoDOMProyecto/Testeo1.html
+++ b/Testing/JavaScript/EventoDOMProyecto/Testeo1.html
@@ -7,6 +7,17 @@
     <link href="Testeo1.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+    <div id="contLoader">
+    <div id="page">
+        <div id="container">
+            <div id="ring"></div>
+            <div id="ring"></div>
+            <div id="ring"></div>
+            <div id="ring"></div>
+            <div id="h3">loading</div>
+        </div>
+    </div>
+    </div>
     <main>
         <h1>Titulo h1</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo vitae, repudiandae hic eum saepe quos voluptatibus eveniet et rem, tempora odit temporibus! Natus, quisquam. Sint, quidem quaerat? Nesciunt, tempora velit.</p>
