Se agregaron Cositas

--- a/Testing/JavaScript/EventoDOMProyecto/Testeo1.html
+++ b/Testing/JavaScript/EventoDOMProyecto/Testeo1.html
@@ -14,17 +14,23 @@
             <div id="ring"></div>
             <div id="ring"></div>
             <div id="ring"></div>
-            <div id="h3">loading</div>
+            <div id="h3">Cargando</div>
         </div>
     </div>
     </div>
     <main>
-        <h1>Titulo h1</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo vitae, repudiandae hic eum saepe quos voluptatibus eveniet et rem, tempora odit temporibus! Natus, quisquam. Sint, quidem quaerat? Nesciunt, tempora velit.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum similique ea, hic obcaecati voluptates eos pariatur. Provident, commodi vel id illum sed libero. Blanditiis similique odio consequatur esse amet ipsam.</p>
-        <h2>Hola soy un h2</h2>
-        <h3>Y yo un h3</h3>
-        <h4>Hola soy h4 todos me olvidan...</h4>
+        <h1 class="mostrarTexto">Titulo h1.</h1>
+        <p class="mostrarTexto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo vitae, repudiandae hic eum saepe quos voluptatibus eveniet et rem, tempora odit temporibus! Natus, quisquam. Sint, quidem quaerat? Nesciunt, tempora velit.</p>
+        <p class="mostrarTexto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum similique ea, hic obcaecati voluptates eos pariatur. Provident, commodi vel id illum sed libero. Blanditiis similique odio consequatur esse amet ipsam.</p>
+        <h2 class="mostrarTexto">Hola soy un h2.</h2>
+        <h3 class="mostrarTexto">Y yo un h3.</h3>
+        <h4 class="mostrarTexto">Hola soy h4 todos me olvidan...</h4>
+        <h1 class="ocultarTexto">Header h1(ingles).</h1>
+        <p class="ocultarTexto">texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles.</p>
+        <p class="ocultarTexto">texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles.</p>
+        <h2 class="ocultarTexto">Hello, i'm a h2.</h2>
+        <h3 class="ocultarTexto">and i am a h3.</h3>
+        <h4 class="ocultarTexto">Hi, i'm a h4, everybody forget me...</h4>
 
         <input type="radio" name="tamaño" id="default" checked>
         <label for="default">Por Defecto</label>
@@ -42,6 +48,15 @@
         <label for="claro">Claro</label>
         <input type="radio" name="tema" id="oscuro">
         <label for="oscuro">Oscuro</label>
+        <br>
+        <input type="radio" name="idioma" id="mostrarTexto" checked>
+        <label for="español">Español</label>
+        <input type="radio" name="idioma" id="ocultarTexto">
+        <label for="ingles">English</label>
+        <br>
+
+        
+
     </main>
     <script src="Testeo1.js"></script>
 </body>
