--- a/Testing/JavaScript/EventoDOMProyecto/Testeo1.html
+++ b/Testing/JavaScript/EventoDOMProyecto/Testeo1.html
@@ -49,10 +49,10 @@
         <input type="radio" name="tema" id="oscuro">
         <label for="oscuro">Oscuro</label>
         <br>
-        <input type="radio" name="idioma" id="mostrarTexto" checked>
-        <label for="español">Español</label>
-        <input type="radio" name="idioma" id="ocultarTexto">
-        <label for="ingles">English</label>
+        <input type="radio" name="idioma" id="texto1" checked>
+        <label for="texto1">Español</label>
+        <input type="radio" name="idioma" id="texto2">
+        <label for="texto2">English</label>
         <br>
 
         
