--- a/Testing/JavaScript/EventoDOMProyecto/Testeo3.html
+++ b/Testing/JavaScript/EventoDOMProyecto/Testeo3.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Testeo3.css">
-    <script src="Testeo3.js" defer></script>
 </head>
 <body>
     <main>
@@ -13,19 +12,15 @@
         <p class="mostrarTexto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo vitae, repudiandae hic eum saepe quos voluptatibus eveniet et rem, tempora odit temporibus! Natus, quisquam. Sint, quidem quaerat? Nesciunt, tempora velit.</p>
         <p class="mostrarTexto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum similique ea, hic obcaecati voluptates eos pariatur. Provident, commodi vel id illum sed libero. Blanditiis similique odio consequatur esse amet ipsam.</p>
         <h2 class="mostrarTexto">Hola soy un h2.</h2>
-        <h3 class="mostrarTexto">Y yo un h3.</h3>
-        <h4 class="mostrarTexto">Hola soy h4 todos me olvidan...</h4>
-        <h1 class="ocultarTexto">Header h1(ingles).</h1>
-        <p class="ocultarTexto">texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles.</p>
-        <p class="ocultarTexto">texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles, texto en ingles.</p>
-        <h2 class="ocultarTexto">Hello, i'm a h2.</h2>
-        <h3 class="ocultarTexto">and i am a h3.</h3>
-        <h4 class="ocultarTexto">Hi, i'm a h4, everybody forget me...</h4>
+        <h2 class="mostrarTexto">Y yo un h3.</h2>
+        <h2 class="mostrarTexto">Hola soy h4 todos me olvidan...</h2>
         <br>
-        <input type="radio" name="idioma" id="texto1" checked>
-        <label for="texto1">Español</label>
-        <input type="radio" name="idioma" id="texto2">
-        <label for="texto2">English</label>
+        <div id="google_translate_element"></div>
     </main>
+
+    <script src="Testeo3.js"></script>
+    <script type="text/javascript" src=
+"https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+    </script>
 </body>
 </html>
