--- a/Testing/JavaScript/EventoDOMProyecto/Testeo3.html
+++ b/Testing/JavaScript/EventoDOMProyecto/Testeo3.html
@@ -8,12 +8,10 @@
 </head>
 <body>
     <main>
-        <h1 class="mostrarTexto">Titulo h1.</h1>
-        <p class="mostrarTexto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo vitae, repudiandae hic eum saepe quos voluptatibus eveniet et rem, tempora odit temporibus! Natus, quisquam. Sint, quidem quaerat? Nesciunt, tempora velit.</p>
-        <p class="mostrarTexto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum similique ea, hic obcaecati voluptates eos pariatur. Provident, commodi vel id illum sed libero. Blanditiis similique odio consequatur esse amet ipsam.</p>
-        <h2 class="mostrarTexto">Hola soy un h2.</h2>
-        <h2 class="mostrarTexto">Y yo un h3.</h2>
-        <h2 class="mostrarTexto">Hola soy h4 todos me olvidan...</h2>
+        <h1>Bienvenido</h1>
+        <p>Le damos la más cordial bienvenida a nuestra modesta, confiable y experta compañía. Nos complace enormemente contar con su presencia y confianza en nuestros servicios. Nuestro compromiso es brindarle la mejor atención y calidad en cada uno de nuestros productos y servicios, para que su experiencia con nosotros sea completamente satisfactoria. ¡Gracias por elegirnos!</p>
+        <p>Nos gustaría que disfrute de nuestro servicio de alta calidad, el cual ha sido diseñado y pensado para satisfacer las necesidades de todos nuestros clientes.</p>
+        <h2>Gracias por su atención.</h2>
         <br>
         <div id="google_translate_element"></div>
     </main>
