--- a/Testing/JavaScript/EventoDOMProyecto/Testeo1.html
+++ b/Testing/JavaScript/EventoDOMProyecto/Testeo1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="Testeo1.css" type="text/css" rel="stylesheet">
 </head>
-<body>
+<body class="dark-scheme">
     <div id="contLoader">
     <div id="page">
         <div id="container">
@@ -44,17 +44,12 @@
         <input type="radio" name="tamaño" id="tam-grande">
         <label for="tam-grande">Grande</label>
         <br>
-        <input type="radio" name="tema" id="claro" checked>
+        <input type="radio" name="tema" id="navegador" checked>
+        <label for="navegador">Navegador</label>
+        <input type="radio" name="tema" id="claro">
         <label for="claro">Claro</label>
         <input type="radio" name="tema" id="oscuro">
         <label for="oscuro">Oscuro</label>
-        <br>
-        <input type="radio" name="idioma" id="texto1" checked>
-        <label for="texto1">Español</label>
-        <input type="radio" name="idioma" id="texto2">
-        <label for="texto2">English</label>
-        <br>
-
         
 
     </main>
