--- a/Testing/JavaScript/EventoDOMProyecto/Testeo3.html
+++ b/Testing/JavaScript/EventoDOMProyecto/Testeo3.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="Testeo3.css">
+    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" defer></script>
+    <script src="Testeo3.js" defer></script>
 </head>
 <body>
     <main>
@@ -15,10 +17,5 @@
         <br>
         <div id="google_translate_element"></div>
     </main>
-
-    <script src="Testeo3.js"></script>
-    <script type="text/javascript" src=
-"https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-    </script>
 </body>
 </html>
