cositas para excluir ciertas cositas.

--- a/Testing/JavaScript/EventoDOMProyecto/Testeo1.html
+++ b/Testing/JavaScript/EventoDOMProyecto/Testeo1.html
@@ -19,6 +19,7 @@
     </div>
     </div>
     <main>
+        <a href="#">Hola soy un anchor</a>
         <h1 class="mostrarTexto">Titulo h1.</h1>
         <p class="mostrarTexto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo vitae, repudiandae hic eum saepe quos voluptatibus eveniet et rem, tempora odit temporibus! Natus, quisquam. Sint, quidem quaerat? Nesciunt, tempora velit.</p>
         <p class="mostrarTexto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum similique ea, hic obcaecati voluptates eos pariatur. Provident, commodi vel id illum sed libero. Blanditiis similique odio consequatur esse amet ipsam.</p>
