--- a/Front End/Segundo Semestre/02-08-2024/Index.html
+++ b/Front End/Segundo Semestre/02-08-2024/Index.html
@@ -49,10 +49,13 @@
         <main>
             <!-- Colocar aquí un slider de imagenes (que ocupe bastante ancho [Entre el 90% y el 100% del contenedor "main"])-->
 
+
+            <!-- Colocar imagenes de productos (tambien pueden aparecer una vez se expande un menu) con el nombre del producto,
+            precio y un boton para añadir al carrito de compras (no tiene que ser funcional). -->
         </main>
 
         <footer>
-
+            <!-- Footer dividido en dos secciones, (dos divs con "width: 50%" y "float: left") -->
         </footer>
     </div>
 </body>
@@ -60,7 +63,7 @@
 
 <!-- Recordatorios:
     1- la ventana de iniciar sesión debe poseer un boton para abrir directamente la ventana de registarme (haciendo que la primera ventana desaparezca).
-    2- la ventana de registrarme debe poseer un boton para abrir directamente la ventana de iniciar sesión ()
-
+    2- la ventana de registrarme debe poseer un boton para abrir directamente la ventana de iniciar sesión (haciendo que la primera ventana desaparezca).
+    3- 
 
 -->
