--- a/Front End/Segundo Semestre/02-08-2024/Index.html
+++ b/Front End/Segundo Semestre/02-08-2024/Index.html
@@ -16,12 +16,12 @@
     <!--------------------------------->
 
     <!-- Archivos CSS / CSS Files -->
-    <link rel="stylesheet" href="" type="text/css">
+    <link rel="stylesheet" href="estilos.css" type="text/css">
     <link rel="stylesheet" href="" type="text/css">
     <!--------------------------------->
 
     <!-- Archivos JS / JS Files -->
-    <script src="" defer></script>
+    <script src="JavaScript.js" defer></script>
     <script src="" defer></script>
     <!--------------------------------->
     
@@ -30,14 +30,17 @@
     <div id="contP">
         <header>
             <div id="logoContenedor"> <!-- Que ocupe el lado izquierdo de su espacio -->
-                <img src="" id="logoImagen">
+                <img src="imagenes/Logo Gaming.jpg" id="logoImagen">
             </div>
-            <a href="">Iniciar Sesión</a> <!-- Hacer aparecer una ventana emergente cuando se clickea (que este en el lado derecho de header pero en el lado izquierdo del anchor "registrarme") -->
-            <a href="">Registrarme</a>  <!-- Hacer aparecer una ventana emergente cuando se clickea (que este en el lado derecho de header) -->
-            <div id="carritoContenedor">
-                <img src="" id="carritoImagen">
+            <div id="registro">
+            <a id="logearme" href="">Iniciar Sesión</a> <!-- Hacer aparecer una ventana emergente cuando se clickea (que este en el lado derecho de header pero en el lado izquierdo del anchor "registrarme") -->
+            <a id="registrarme" href="">Registrarme</a>  <!-- Hacer aparecer una ventana emergente cuando se clickea (que este en el lado derecho de header) -->
             </div>
         </header>
+
+        <div id="carritoContenedor">
+            <img src="imagenes/CarritoDeCompras.png" id="carritoImagen">
+        </div>
         
         <nav>
             <a href="">Categoria 1</a>
