--- a/Front End/Segundo Semestre/02-08-2024/Index.html
+++ b/Front End/Segundo Semestre/02-08-2024/Index.html
@@ -16,29 +16,42 @@
     <!--------------------------------->
 
     <!-- Archivos CSS / CSS Files -->
-    <link rel="stylesheet" href="" type="text/css">
+    <link rel="stylesheet" href="estilos.css" type="text/css">
     <link rel="stylesheet" href="" type="text/css">
     <!--------------------------------->
 
     <!-- Archivos JS / JS Files -->
-    <script src="" defer></script>
+    <script src="JavaScript.js" defer></script>
     <script src="" defer></script>
     <!--------------------------------->
     
 </head>
 <body>
     <div id="contP">
-        <header>
-            <div id="logoContenedor"> <!-- Que ocupe el lado izquierdo de su espacio -->
-                <img src="" id="logoImagen">
-            </div>
-            <a href="">Iniciar Sesión</a> <!-- Hacer aparecer una ventana emergente cuando se clickea (que este en el lado derecho de header pero en el lado izquierdo del anchor "registrarme") -->
-            <a href="">Registrarme</a>  <!-- Hacer aparecer una ventana emergente cuando se clickea (que este en el lado derecho de header) -->
-            <div id="carritoContenedor">
-                <img src="" id="carritoImagen">
-            </div>
+        <header class="sticky" id="navegacion">
+            <nav class="topnav" id="myTopnav">
+                <div id="logo_Menu">
+                    <a href="index.html" id="logoContenedor">
+                        <img id="logoImagen" src="imagenes/Logo Gaming Movil.png">
+                    </a>
+                    <div id="menu" class="hamburger-menu">
+                        <div id="linea1" class="line"></div>
+                        <div id="linea2" class="line"></div>
+                        <div id="linea3" class="line"></div>
+                    </div>
+                </div>
+                <div class="displayAncNone"  id="myLinksAnchor">
+                    <div id="separador"></div>
+                    <a class="links item" id="aInicio"  href="index.html">Categoria 1</a>
+                    <a class="links item" id="aReserva" href="html\reserva.html">Categoria 2</a>
+                    <a class="links item" id="aNosotros"href="html\nosotros.html">Categoria 3</a>
+                    <a class="links item" id="aContacto"href="html\contacto.html">Categoria 4</a>
+                </div>
+            </nav>
         </header>
         
+        <div class="separadorSeccion"></div>
+
         <nav>
             <a href="">Categoria 1</a>
             <a href="">Categoria 2</a> <!-- Ordenar y determinar bien las categorias (también pensar sobre que sera cada categoria)-->
