--- a/Front End/Segundo Semestre/02-08-2024/Index.html
+++ b/Front End/Segundo Semestre/02-08-2024/Index.html
@@ -42,11 +42,15 @@
             <img src="imagenes/CarritoDeCompras.png" id="carritoImagen">
         </div>
         
-        <nav>
-            <a href="">Categoria 1</a>
-            <a href="">Categoria 2</a> <!-- Ordenar y determinar bien las categorias (también pensar sobre que sera cada categoria)-->
-            <a href="">Categoria 3</a>
-            <a href="">Categoria 4</a>
+        <div id="navigationButtonContainer">
+            <img id="navigationButton" src="imagenes/MenuHamburguesaPersonalizado.png">
+        </div>
+
+        <nav id="navigation" class="default">
+            <a class="cat" id="cat1" href="">Categoria 1</a>
+            <a class="cat" href="">Categoria 2</a> <!-- Ordenar y determinar bien las categorias (también pensar sobre que sera cada categoria)-->
+            <a class="cat" href="">Categoria 3</a>
+            <a class="cat" href="">Categoria 4</a>
         </nav>
 
         <main>
