--- a/Front End/Segundo Semestre/02-08-2024/Index.html
+++ b/Front End/Segundo Semestre/02-08-2024/Index.html
@@ -33,8 +33,8 @@
                 <img src="imagenes/Logo Gaming.jpg" id="logoImagen">
             </div>
             <div id="registro">
-            <a id="logearme" href="">Iniciar Sesión</a> <!-- Hacer aparecer una ventana emergente cuando se clickea (que este en el lado derecho de header pero en el lado izquierdo del anchor "registrarme") -->
-            <a id="registrarme" href="">Registrarme</a>  <!-- Hacer aparecer una ventana emergente cuando se clickea (que este en el lado derecho de header) -->
+            <a id="logearme">Iniciar Sesión</a> <!-- Hacer aparecer una ventana emergente cuando se clickea (que este en el lado derecho de header pero en el lado izquierdo del anchor "registrarme") -->
+            <a id="registrarme">Registrarme</a>  <!-- Hacer aparecer una ventana emergente cuando se clickea (que este en el lado derecho de header) -->
             </div>
         </header>
 
@@ -48,10 +48,47 @@
 
         <nav id="navigation" class="default">
             <a class="cat" id="cat1" href="">Categoria 1</a>
-            <a class="cat" href="">Categoria 2</a> <!-- Ordenar y determinar bien las categorias (también pensar sobre que sera cada categoria)-->
+            <a class="cat" id="cat2" href="">Categoria 2</a> <!-- Ordenar y determinar bien las categorias (también pensar sobre que sera cada categoria)-->
             <a class="cat" href="">Categoria 3</a>
             <a class="cat" href="">Categoria 4</a>
         </nav>
+
+        <section>
+            <div id="menuLogin" class="defaultL">
+                <form id="formLogin">
+                    <div>
+                        <div class="input-group">
+                            <label for="email">Correo:</label>
+                            <input type="email" id="email" name="email" autocomplete="email" placeholder="RobertoGimenez@hotmail.com" required>
+                        </div>
+                        <div class="input-group">
+                            <label for="password">Contraseña:</label>
+                            <input type="password" id="contraseñaL" name="contraseñaL" autocomplete="current-password" required>
+                        </div>
+                        <input type="submit" id="btn-submit" value="Enviar">
+                    </div>
+                </form>
+            </div>
+            <div id="menuRegister" class="defaultR">
+                <form id="formRegister">
+                    <div>
+                        <div class="input-group">
+                            <label for="email">Correo:</label>
+                            <input type="email" id="email" name="email" autocomplete="email" placeholder="RobertoGimenez@hotmail.com" required>
+                        </div>
+                        <div>
+                            <label for="contraseñaR">Contraseña</label>
+                            <input type="password" id="contraseñaR" name="contraseñaR" required>
+                        </div>
+                        <div class="input-group">
+                            <label for="contraseñaRC">Confirmar Contraseña</label>
+                            <input type="password" id="contraseñaRC" name="contraseñaRC" required> 
+                        </div>
+                        <input type="submit" id="btn-submit" value="Enviar">
+                    </div>
+                </form>
+            </div>
+        </section>
 
         <main>
             <!-- Colocar aquí un slider de imagenes (que ocupe bastante ancho [Entre el 90% y el 100% del contenedor "main"])-->
