Cambios por verificaciones.

--- a/BackEnd/Segundo Semestre/Tareas atrasadas/Tarea 1 de segundo semestre/index.html
+++ b/BackEnd/Segundo Semestre/Tareas atrasadas/Tarea 1 de segundo semestre/index.html
@@ -24,6 +24,8 @@
     <br> <br>
     <input type="button" id="promedio" value="promedio">
     <input type="button" id="lista" value="lista">
+    <br> <br>
+    <input type="button" id="verificar" value="Verificar Estudiante">
     <br>
     <h1>Al usar la opción "Eliminar" tenga en cuenta que solo se toma en consideración el Nombre que se ingreso previamente al sistema.</h1>
 </body>
